[package]
name = "extrautils"
version = "0.1.0"
authors = ["Ticki <Ticki@users.noreply.github.com>"]

[[bin]]
name = "calc"
path = "src/bin/calc.rs"

[[bin]]
name = "cur"
path = "src/bin/cur.rs"

[[bin]]
name = "cksum"
path = "src/bin/cksum.rs"

[[bin]]
name = "dmesg"
path = "src/bin/dmesg.rs"

[[bin]]
name = "grep"
path = "src/bin/grep.rs"

[[bin]]
name = "info"
path = "src/bin/info.rs"

[[bin]]
name = "less"
path = "src/bin/less.rs"

[[bin]]
name = "man"
path = "src/bin/man.rs"

[[bin]]
name = "mdless"
path = "src/bin/mdless.rs"

[[bin]]
name = "mtxt"
path = "src/bin/mtxt.rs"

[[bin]]
name = "rem"
path = "src/bin/rem.rs"

[[bin]]
name = "resize"
path = "src/bin/resize.rs"

[[bin]]
name = "screenfetch"
path = "src/bin/screenfetch.rs"

[[bin]]
name = "watch"
path = "src/bin/watch.rs"

[dependencies]
extra = { git = "https://github.com/redox-os/libextra.git" }
pager = { git = "https://github.com/redox-os/libpager.git" }
raw-cpuid = "2.0"
redox_syscall = "0.1"
termion = { git = "https://github.com/redox-os/termion.git" }
